# travel_planner

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 71ebcdd801f7_create_initial_tables.py
app/: main.py
app/api/: deps.py  exception_handlers.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  project_places.py  projects.py
app/clients/: art_institute_client.py
app/core/: config.py  exceptions.py  security.py
app/database/: session.py
app/models/: __init__.py  project_place.py  travel_project.py  user.py
app/repositories/: __init__.py  project_place_repo.py  project_repo.py  user_repo.py
app/schemas/: __init__.py  auth.py  project_place.py  travel_project.py  user.py
app/services/: auth_service.py  project_place_service.py  project_service.py
database/: base.py  session.py
models/: __init__.py  project_place.py  travel_project.py  user.py
